--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
 			<artifactId>java-jwt</artifactId>
 			<version>3.3.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.310</version>
+		</dependency>
 	</dependencies>
 
 	<build>
