--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,9 @@ spring.jpa.show-sql=true
 jwt.algorithm.key=gdhjgsad-ashdjkashdjkh-ashdjshdjhsa
 jwt.issuer=pankaj
 jwt.expiry.duration=86400000
+
+amazon.s3.region= ** your region **
+amazon.s3.bucket= ** your bucket ** 
+amazon.aws.access-key-id=** your access key ** 
+amazon.aws.access-key-secret= ** your access key secret ** 
+
